--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>flywill<title>
+  <title>flywill</title>
 </head>
 <body>
   <h1>flywill的个人主页</h1>
